<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@drawable/background"
    tools:context=".Ui.LoginActivity">

    <ImageView
        android:layout_marginTop="40dp"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:text="tranchikhang"
        android:textStyle="italic"
        android:drawableLeft="@drawable/username"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="40dp"
        android:id="@+id/login_username"
        android:textColorHint="@color/white_color"
        android:textColor="@color/white_color"
        android:hint="@string/login_username"
        android:backgroundTint="@color/white_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:text="khang0979589455"
        android:textStyle="italic"
        android:drawableLeft="@drawable/password"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_marginTop="5dp"
        android:textColorHint="@color/white_color"
        android:textColor="@color/white_color"
        android:hint="@string/login_password"
        android:backgroundTint="@color/white_color"
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:textSize="25sp"
        android:background="#00aeff"
        android:shadowColor="@color/white_color"
        android:layout_marginTop="25dp"
        android:id="@+id/login_signin"
        android:textColor="@color/white_color"
        android:text="@string/login_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/login_sigup"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal|bottom"
        android:paddingBottom="8dp"
        android:text="@string/login_createaccount"
        android:textColor="@color/pink_color"
        android:textStyle="italic" />
</LinearLayout>