<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent"
    tools:context=".Ui.detailActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="350dp"
                app:cardBackgroundColor="@color/back_ground_card"
                app:cardElevation="4dp">

                <LinearLayout
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:background="@drawable/botom_line"
                        android:id="@+id/detail_title"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="incredible 2"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/white_color">
                    </TextView>

                    <ImageView
                        android:scaleType="centerCrop"
                        android:layout_weight="6"
                        android:id="@+id/detail_image"
                        android:layout_width="match_parent"
                        android:layout_height="0dp" />

                    <LinearLayout
                        android:padding="5dp"
                        android:orientation="horizontal"
                        android:layout_weight="1.7"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">

                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/detail_rate_image"
                                android:src="@drawable/yellow_star_24"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/detail_rate"
                                android:textColor="@color/white_color"
                                android:layout_below="@id/detail_rate_image"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:id="@+id/detail_rate_count"
                                android:textColor="@color/white_color"
                                android:layout_below="@id/detail_rate"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/detail_my_rate_image"
                                android:src="@drawable/you_unrate"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:id="@+id/detail_my_rate"
                                android:textColor="@color/white_color"
                                android:text="@string/rate_this"
                                android:layout_below="@id/detail_my_rate_image"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            <TextView
                                android:text="@string/you"
                                android:textColor="@color/white_color"
                                android:layout_below="@id/detail_my_rate"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </RelativeLayout>

                        <FrameLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">
                            <ImageView
                                android:id="@+id/detail_watch_list"
                                android:src="@drawable/addwatchlist"
                                android:layout_gravity="center_horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/detail_my_favourite"
                                android:src="@drawable/unfavourite"
                                android:layout_gravity="center_horizontal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </FrameLayout>

                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/back_ground_card"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:background="@drawable/botom_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/overview"
                        android:textColor="@color/white_color"
                        android:textStyle="bold" />

                    <android.support.v4.widget.NestedScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/detail_oveview"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/temp"
                                android:textColor="@color/white_color" />

                    </android.support.v4.widget.NestedScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/back_ground_card"
                app:cardElevation="10dp">

                <LinearLayout
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:background="@drawable/botom_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detail_similar"
                            android:text="@string/similar"
                            android:textStyle="bold"
                            android:textColor="@color/white_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/detail_similar_see_all"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/blue_color"
                            android:text="@string/seemore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:orientation="horizontal"
                        android:id="@+id/detail_recylerview_similar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/back_ground_card"
                app:cardElevation="10dp">

                <LinearLayout
                    android:padding="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:background="@drawable/botom_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/detail_recommend"
                            android:text="@string/recommend"
                            android:textStyle="bold"
                            android:textColor="@color/white_color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/detail_recommend_see_all"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/blue_color"
                            android:text="@string/seemore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <android.support.v7.widget.RecyclerView
                        android:orientation="horizontal"
                        android:id="@+id/detail_recylerview_recommend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </android.support.v7.widget.RecyclerView>
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>