<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    tools:context=".Ui.Account_Activity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <FrameLayout
                    android:background="@drawable/background"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/account_avatar_image"
                            android:layout_width="130dp"
                            android:layout_height="130dp" />

                        <TextView
                            android:textStyle="bold"
                            android:id="@+id/account_username"
                            android:layout_marginTop="20dp"
                            android:layout_centerHorizontal="true"
                            android:layout_below="@id/account_avatar_image"
                            android:textColor="@color/white_color"
                            android:text="khang tran"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                    </RelativeLayout>

                    <ImageView

                        android:id="@+id/account_activity_logout"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="end"
                        android:src="@drawable/logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </FrameLayout>

                <ProgressBar
                    android:id="@+id/account_activity_progressbar"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/back_ground_card"
                android:layout_width="match_parent"
                android:layout_height="70dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/account_activity_watchList"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:drawableLeft="@drawable/tag"
                        android:gravity="center"
                        android:textColor="@color/white_color"
                        android:text="@string/watchlist"
                        android:background="@color/background_color"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/account_activity_favorite"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:drawableLeft="@drawable/favorite"
                        android:gravity="center"
                        android:textColor="@color/white_color"
                        android:text="@string/favourite"
                        android:background="@color/background_color"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/account_activity_rated"
                        android:layout_margin="4dp"
                        android:padding="8dp"
                        android:drawableLeft="@drawable/rating"
                        android:gravity="center"
                        android:textColor="@color/white_color"
                        android:text="@string/rated"
                        android:background="@color/background_color"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>